# Intuitive_Challenge

./: .gitignore  README.md  docker-compose.yml  example.env  intuitive_care.postman_collection.json  main.py  pyproject.toml  settings.py  utils.py
app/backend/: main.py
app/backend/core/: database.py
app/frontend/src/: App.vue
scraper/: gov_docs.py
scripts/: extract_tables_pdf.py  populate_database.py  scraper_gov_docs.py  scraper_operators_docs.py  webscraping_gov_docs.py
tests/: test_extract_tables_pdf.py  test_gov_docs.py  test_scraper_gov_docs_pdf.py  test_webscraping_gov_docs_pdf.py
utils/: file_handler.py  scraper.py
